[gd_scene load_steps=2 format=3 uid="uid://c8qvt5q4jkuv7q"]

[ext_resource type="Script" uid="uid://bw2v6e0lmqi3c" path="res://scripts/ui/popups/templates/control_popup_template.gd" id="1_yvmqe"]

[node name="ControlPopupTemplate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "弹窗标题"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "弹窗内容"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "确定"

[node name="CancelButton" type="Button" parent="Panel/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "取消"
